# generateJANAFPolynomials

./: .gitignore  CHEMKIN-II-FileFormat.md  README.md  plotAllSpeciesAndThermoProperties.ipynb  pyproject.toml  testOxygenThermoProperties.ipynb
CryogenicJanafPolynomials/: genCHEMKINThermo.py  heatOfFormation.py  thermoFit.py
GenerateJANAFPolynomials/: genCHEMKINThermo.py  thermoFit.py
generateJANAFPolynomials/: genCHEMKINThermo.py  heatOfFormation.py  thermoFit.py
test/: nc7_2c_therm.txt
